fix z-index for all editors

--- a/frontend/src/styles/Editor.css
+++ b/frontend/src/styles/Editor.css
@@ -10,4 +10,5 @@
   color: inherit;
   font-family: inherit;
   font-size: inherit;
+  z-index: 1010 !important;
 }
